correct overflow

--- a/style.css
+++ b/style.css
@@ -57,9 +57,6 @@ color:white;
 }
 
 .ann-paragraph{
-    height: 90px;
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    height: 70px;
+    overflow: auto;
 }
